--- a/_config.yml
+++ b/_config.yml
@@ -106,8 +106,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 zotero_username: # your zotero username
 
-contact_note: >
-  Waitted to be updated
+contact_note:
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
